tests/fixtures/invalid/pow_bool_int_set.py
# Cannot call pow() with Bool, Int, Set[int]
x = pow(True, 1, {1, 2, 3})
